--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title | default: site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+    <link rel="icon" type="image/png" href="{{ "/assets/css/pytorch-logo.png" | relative_url }}">
+    <script src="{{ "/assets/js/search.js" | relative_url }}"></script>
 </head>
 <body>
     {{ content }}
