--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,6 +8,12 @@
     <link rel="icon" type="image/png" href="{{ "/assets/css/pytorch-logo.png" | relative_url }}">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="{{ "/" | relative_url }}">Home</a>
+            <a href="{{ "/dashboard.html" | relative_url }}">Dashboard</a>
+        </nav>
+    </header>
     {{ content }}
 </body>
 </html>
